assets/css/general.css
.main-nav .container {
    margin-top: 0px !important;
}

.container {
	margin-top: 55px;
}

#nav-container {
	margin-top: 0;
	position: sticky;
	top: 0;
}

thead > tr > td {
	position: sticky;
	top: 45px;
	background-color: aliceblue;
}

.dashboard {
	padding-top: 15px;
}
.row.logdata {
	padding-top: 15px;
}

.statistics {
	padding-top: 15px;
}

.statistics_custom {
	padding-top: 15px;
}

.notes {
	padding-top: 15px;
}

.eqsl {
    padding-top: 15px;
}

.search {
	padding-top: 15px;
}

.logbook {
	padding-top: 15px;
}

.adif {
    padding-top: 15px;
}

.adif .alert p {
    margin-bottom: 0rem;
}

.api .alert p {
    margin-bottom: 0rem;
}


.qso_panel {
    padding-top: 25px;
}

.qso_panel #callsign {
    text-transform: uppercase;
}

.qso_panel #locator {
    text-transform: uppercase;
}

.qso_panel .iota_ref {
    text-transform: uppercase;
}

.qso_panel .sota_ref {
    text-transform: uppercase;
}

.workedGrid {
    border-color: green;
}

.newGrid {
    border-color: red;
    border-width: 2px;
}

#country {
    border: none;
}


TD.eqsl{
    width: 33px;
}

.eqsl-green{
    color: #00A000;
    font-size: 1.1em;
}
.eqsl-red{
    color: #F00;
    font-size: 1.1em;
}
.qsl-green{
    color: #00A000;
    font-size: 1.1em;
}
.qsl-red{
    color: #F00;
    font-size: 1.1em;
}
.qsl-yellow{
    color: #d39e00;
    font-size: 1.1em;
}
.qsl-grey{
    color: #dddddd;
    font-size: 1.1em;
}
TD.lotw{
    width: 33px;
}
.lotw-green{
    color: #00A000;
    font-size: 1.1em;
}
.lotw-red{
    color: #F00;
    font-size: 1.1em;
}

.qso-edit-box {
    padding: 10px;
}

.previous-qsos .card-title {
    margin-bottom: 0px;
}

.qso-map .card-title {
    margin-bottom: 0px;
}

.qso-map {
    margin-bottom: 10px;
}

.callsign-suggest {
    margin-bottom: 10px;
}

.callsign-suggest .card-title {
    margin-bottom: 0px;
}


#search_box #callsign {
    text-transform: uppercase;
}

#nav-bar-search-input:focus {
    text-transform: uppercase;
}

.settings {
    padding-top: 15px;
}

.settings-nav {
    margin-bottom: 15px;
    list-style: none;
    background-color: #fff;
    border: 1px solid #d1d5da;
    border-radius: 3px;
}

.settings-nav .nav-link {
    list-style: none;
    background-color: #fff;
    border: 1px solid #d1d5da;
}

.settings-nav .nav-link:hover {
    background-color: #e1e4e8;

}

/* QSL Card Management CSS */

.qsl_management {
    padding-top: 15px;
}

/*
*
*
*/
.qso-map-new .card-header {
background: #0F2027;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
color: #ffffff;
}

#myTab .nav-link {
    padding: 8px !important;
}

